# llxfederation

./: alternative_libgva  gva-auth-update  libgva  pyproject.toml
adi/: adi  adi.py
cdc/: cdc.py
debian/: changelog  control  copyright  dirs  federation-validation.install  federation-validation.postinst  gva-gate-adi.install  gva-gate-cdc.install  gva-gate-federation.install  gva-gate-federation.postinst  install  llxfederation-bin.install  n4d-llxfederation.install  python3-gvaauthupdate.dirs  python3-gvaauthupdate.install  python3-llxfederation.install  rules
default_config/: id
default_configs/: cdc  local
examples/: default
federation/: id  id.py
lib/: ad.py  adi.py  federation.py  ldap.py  mapper.py  user.py
lib-gvaauthupdate/: __init__.py
n4d/: GvaGate.json  gvagate.py
