[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "llxfederation"
version = "0.1"
description = ""
authors = [
	{ name = "Raul Rodrigo Segura", email="raurodse@gmail.com" },
	{ name = "LliureX Team"}
]
license = {text="GPL-3"}
urls = {repository="https://github.com/lliurex/llxfederation"}

[tool.setuptools]
packages = ["llxfederation","gvaauthupdate"]

[tool.setuptools.package-dir]
llxfederation = "lib"
gvaauthupdate = "lib-gvaauthupdate"
